add a short example. slide edits

--- a/slides.Rmd
+++ b/slides.Rmd
@@ -43,13 +43,15 @@ class: inverse, center, middle
 
 ## rmarkdown -> knitr -> markdown -> pandoc -> ...
 
+## A minimal example (minimal.Rmd)
+
 ---
 
 # Examples
 
  - These slides!
 
- - Smaller processing tasks 
+ - Smaller processing tasks (short-example.Rmd)
  
  - Larger more involved reports (e.g. tech reports / thesis / publications) containing charts, tables, references
  
